examples/typechecking/handle_affine.an
type Resource = id: I32

consume _ = ()

effect Emit a with
    emit: fn a -> Unit

// Moving a non-copy outer variable in a handler branch should error
move_outer_in_branch (r: Resource) (x: I32) =
    handle emit ()
    | emit () ->
        consume x
        consume r
        resume ()

// Moving branch-local variables is fine
move_handler_param () =
    handle emit (Resource 1)
    | emit x ->
        consume x
        local = Resource 2
        consume local
        resume ()

// The handled expression runs once so moves there are fine
move_in_expression () =
    r = Resource 3
    handle consume r
    | emit () -> resume ()

main () = ()

// args: --check --no-color
// expected exit status: 1
// expected stderr:
// examples/typechecking/handle_affine.an:13:17
// 12 |         consume x
//    |         // error: Cannot move r in a handler branch because it may be executed multiple times
// 13 |         consume r
//    |                 ^
// 14 |         resume ()
// 
// Found 1 error and 0 warnings

